[package]
name = "exhort_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.5"
xmltojson="0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simplelog = "0.10"
cvss = { version = "2.1.0", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
chrono = "0.4.37"
csv = "1.1"